# ChildGuardians-AI

./: .copilot-instructions.md  .env.example  .gitignore  .pre-commit-config.yaml  CODE_QUALITY_LESSONS.md  CONTRIBUTING.md  COVER_LETTER.md  DEVELOPER_GUIDE.md  Dockerfile  Dockerfile.dev  HANDOFF.md  HOW_TO_REVIEW.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/k8s/: deployment.yaml
docs/: CHARTER.md  CODE_QUALITY_LESSONS.md  DEPLOYMENT_GUIDE.md  LEGAL_APPENDICES.md  SURVEILLANCE_EXCLUSION.md  WHAT_THIS_SYSTEM_WILL_NEVER_DO.md
examples/: complete_workflow.py
scripts/: verify_installation.py
specs/: API.md  CIVIS_CYBER.md  DEFENSE_SIMULATOR.md  ECP.md  EVIDENCE_OBJECT.md  FAILURE_MODES.md  GJEP.md  INDUSTRIAL_MAGNET.md  VICTIM_ENGINE.md  WATCHDOG.md
src/child_guardians/: __init__.py  cli.py  config.py
src/child_guardians/api/: __init__.py  main.py
src/child_guardians/core/: __init__.py  chain_of_custody.py  defense_simulator.py  evidence_object.py  hash_registry.py
tests/: conftest.py  test_api.py  test_chain_of_custody.py  test_cli.py  test_config.py  test_defense_simulator.py  test_evidence_object.py  test_hash_registry.py
tests/integration/: test_full_workflow.py
